--- a/Vicodin/templates/Vicodin/base.html
+++ b/Vicodin/templates/Vicodin/base.html
@@ -57,75 +57,45 @@
                                     <div class="ltn__main-menu">
                                         <ul>
                                             <li><a href="{% url 'Inicio' %}">Inicio</a></li>
-                                            <li><a href="{% url 'Nosotros' %}">Nosotros</a></li>
-                                            <!-- <li><a href="shop.html">Productos</a></li> -->
-                                            <!-- <li><a href="contact.html">Blog</a></li> -->
+                                            <li><a href="{% url 'CrearCliente' %}">Usuarios</a></li>
+                                            <li><a href="{% url 'CrearProducto' %}">Productos</a></li>
+                                            <li><a href="{% url 'CrearBlog' %}">Publicaciones</a></li>
+                                            <li><a href="{% url 'BuscarProducto' %}">Buscar productos</a></li>
                                         </ul>
                                     </div>
                                 </nav>
                             </div>
                         </div>
-                        <div class="col--- ltn__header-options ltn__header-options-2 mb-sm-20">
-                            <!-- header-search-1 -->
-                            <div class="header-search-wrap">
-                                <div class="header-search-1">
-                                    <div class="search-icon">
-                                        <i class="icon-search for-search-show"></i>
-                                        <i class="icon-cancel  for-search-close"></i>
-                                    </div>
-                                </div>
-                                <div class="header-search-1-form">
-                                    <form id="#" method="get" action="#">
-                                        <input type="text" name="search" value="" placeholder="Search here..." />
-                                        <button type="submit">
-                                            <span><i class="icon-search"></i></span>
-                                        </button>
-                                    </form>
-                                </div>
-                            </div>
-                            <!-- user-menu -->
-                            <div class="ltn__drop-menu user-menu">
-                                <ul>
-                                    <li>
-                                        <a href="#"><i class="icon-user"></i></a>
-                                        <ul>
-                                            <li><a href="login.html">Sign in</a></li>
-                                            <li><a href="register.html">Register</a></li>
-                                            <li><a href="account.html">My Account</a></li>
-                                            <li><a href="wishlist.html">Wishlist</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </div>
-                            <!-- mini-cart -->
-                            <div class="mini-cart-icon">
-                                <a href="#ltn__utilize-cart-menu" class="ltn__utilize-toggle">
-                                    <i class="icon-shopping-cart"></i>
-                                    <sup>2</sup>
-                                </a>
-                            </div>
-                            <!-- mini-cart -->
-                            <!-- Mobile Menu Button -->
-                            <div class="mobile-menu-toggle d-xl-none">
-                                <a href="#ltn__utilize-mobile-menu" class="ltn__utilize-toggle">
-                                    <svg viewBox="0 0 800 600">
-                                        <path
-                                            d="M300,220 C300,220 520,220 540,220 C740,220 640,540 520,420 C440,340 300,200 300,200"
-                                            id="top"></path>
-                                        <path d="M300,320 L540,320" id="middle"></path>
-                                        <path
-                                            d="M300,210 C300,210 520,210 540,210 C740,210 640,530 520,410 C440,330 300,190 300,190"
-                                            id="bottom"
-                                            transform="translate(480, 320) scale(1, -1) translate(-480, -318) "></path>
-                                    </svg>
-                                </a>
-                            </div>
-                        </div>
+                        <!-- COLUMN RIGTH -->
                     </div>
                 </div>
             </div>
             <!-- ltn__header-middle-area end -->
         </header>
+
+        <br><br><br><br>
+        <div class="ltn__utilize-overlay"></div>
+        <!-- BREADCRUMB AREA START -->
+        <div class="ltn__breadcrumb-area text-left bg-overlay-white-30 bg-image "
+            data-bs-bg="{% static 'Vicodin/assets/img/bg/14.jpg' %}">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="ltn__breadcrumb-inner">
+                            <h1 class="page-title">{{ texto_breadcrumb }}</h1>
+                            <div class="ltn__breadcrumb-list">
+                                <ul>
+                                    <li><a href="{% url 'Inicio' %}"><span class="ltn__secondary-color"><i
+                                                    class="fas fa-home"></i></span> Inicio</a></li>
+                                    <li>{{ texto_breadcrumb }}</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- BREADCRUMB AREA END -->
         
 
         {% block main %}
@@ -196,53 +166,6 @@
                                         <li><a href="contact.html">Contact us</a></li>
                                     </ul>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-2 col-md-6 col-sm-6 col-12">
-                            <div class="footer-widget footer-menu-widget clearfix">
-                                <h4 class="footer-title">Services</h4>
-                                <div class="footer-menu">
-                                    <ul>
-                                        <li><a href="order-tracking.html">Order tracking</a></li>
-                                        <li><a href="wishlist.html">Wish List</a></li>
-                                        <li><a href="login.html">Login</a></li>
-                                        <li><a href="account.html">My account</a></li>
-                                        <li><a href="about.html">Terms & Conditions</a></li>
-                                        <li><a href="about.html">Promotional Offers</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-2 col-md-6 col-sm-6 col-12">
-                            <div class="footer-widget footer-menu-widget clearfix">
-                                <h4 class="footer-title">Customer Care</h4>
-                                <div class="footer-menu">
-                                    <ul>
-                                        <li><a href="login.html">Login</a></li>
-                                        <li><a href="account.html">My account</a></li>
-                                        <li><a href="wishlist.html">Wish List</a></li>
-                                        <li><a href="order-tracking.html">Order tracking</a></li>
-                                        <li><a href="faq.html">FAQ</a></li>
-                                        <li><a href="contact.html">Contact us</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-3 col-md-6 col-sm-12 col-12">
-                            <div class="footer-widget footer-newsletter-widget">
-                                <h4 class="footer-title">Newsletter</h4>
-                                <p>Subscribe to our weekly Newsletter and receive updates via email.</p>
-                                <div class="footer-newsletter">
-                                    <form action="#">
-                                        <input type="email" name="email" placeholder="Email*">
-                                        <div class="btn-wrapper">
-                                            <button class="theme-btn-1 btn" type="submit"><i
-                                                    class="fas fa-location-arrow"></i></button>
-                                        </div>
-                                    </form>
-                                </div>
-                                <h5 class="mt-30">We Accept</h5>
-                                <img src="{% static 'Vicodin/assets/img/icons/payment-4.png' %}" alt="Payment Image">
                             </div>
                         </div>
                     </div>
