--- a/Vicodin/templates/Vicodin/base.html
+++ b/Vicodin/templates/Vicodin/base.html
@@ -37,7 +37,7 @@
                         <div class="col">
                             <div class="site-logo-wrap">
                                 <div class="site-logo">
-                                    <a href="index.html"><img src="{% static 'Vicodin/assets/img/logo.png' %}"
+                                    <a href="{% url 'Inicio' %}"><img src="{% static 'Vicodin/assets/img/logo.png' %}"
                                             alt="Logo"></a>
                                 </div>
                                 <div class="get-support clearfix d-none">
@@ -57,7 +57,7 @@
                                     <div class="ltn__main-menu">
                                         <ul>
                                             <li><a href="{% url 'Inicio' %}">Inicio</a></li>
-                                            <li><a href="{% url 'CrearCliente' %}">Usuarios</a></li>
+                                            <li><a href="{% url 'CrearCliente' %}">Clientes</a></li>
                                             <li><a href="{% url 'CrearProducto' %}">Productos</a></li>
                                             <li><a href="{% url 'CrearBlog' %}">Publicaciones</a></li>
                                             <li><a href="{% url 'BuscarProducto' %}">Buscar productos</a></li>
@@ -76,7 +76,7 @@
         <br><br><br><br>
         <div class="ltn__utilize-overlay"></div>
         <!-- BREADCRUMB AREA START -->
-        <div class="ltn__breadcrumb-area text-left bg-overlay-white-30 bg-image "
+        <!-- <div class="ltn__breadcrumb-area text-left bg-overlay-white-30 bg-image "
             data-bs-bg="{% static 'Vicodin/assets/img/bg/14.jpg' %}">
             <div class="container">
                 <div class="row">
@@ -94,7 +94,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- BREADCRUMB AREA END -->
         
 
