--- a/Vicodin/templates/Vicodin/base.html
+++ b/Vicodin/templates/Vicodin/base.html
@@ -156,7 +156,7 @@
                         <div class="col-xl-2 col-md-6 col-sm-6 col-12">
                             <div class="footer-widget footer-menu-widget clearfix">
                                 <h4 class="footer-title">Company</h4>
-                                <div class="footer-menu">
+                                <!-- <div class="footer-menu">
                                     <ul>
                                         <li><a href="about.html">About</a></li>
                                         <li><a href="blog.html">Blog</a></li>
@@ -165,7 +165,7 @@
                                         <li><a href="faq.html">FAQ</a></li>
                                         <li><a href="contact.html">Contact us</a></li>
                                     </ul>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
