--- a/Vicodin/templates/Vicodin/base.html
+++ b/Vicodin/templates/Vicodin/base.html
@@ -57,9 +57,11 @@
                                     <div class="ltn__main-menu">
                                         <ul>
                                             <li><a href="{% url 'Inicio' %}">Inicio</a></li>
-                                            <li><a href="{% url 'CrearCliente' %}">Clientes</a></li>
-                                            <li><a href="{% url 'CrearProducto' %}">Productos</a></li>
-                                            <li><a href="{% url 'CrearBlog' %}">Publicaciones</a></li>
+                                            {% if request.user.is_authenticated %}
+                                                <li><a href="{% url 'CrearCliente' %}">Clientes</a></li>
+                                            {% endif %}
+                                            <li><a href="{% url 'ProductoList' %}">Productos</a></li>
+                                            <li><a href="{% url 'PublicacionList' %}">Publicaciones</a></li>
                                             <li><a href="{% url 'BuscarProducto' %}">Buscar productos</a></li>
                                         </ul>
                                     </div>
@@ -67,10 +69,61 @@
                             </div>
                         </div>
                         <!-- COLUMN RIGTH -->
+                        <div class="col--- ltn__header-options ltn__header-options-2 mb-sm-20">
+                            <!-- header-search-1 -->
+                            <div class="header-search-wrap">
+                                <div class="header-search-1">
+                                    <div class="search-icon">
+                                        <i class="icon-search for-search-show"></i>
+                                        <i class="icon-cancel  for-search-close"></i>
+                                    </div>
+                                </div>
+                                <div class="header-search-1-form">
+                                    <form id="#" method="get" action="#">
+                                        <input type="text" name="search" value="" placeholder="Search here..." />
+                                        <button type="submit">
+                                            <span><i class="icon-search"></i></span>
+                                        </button>
+                                    </form>
+                                </div>
+                            </div>
+                            <!-- user-menu -->
+                            <div class="ltn__drop-menu user-menu">
+                                <ul>
+                                    {% if request.user.is_authenticated %}
+                                        <li>
+                                            <a href="#"><i class="icon-user"></i></a>
+                                            <ul>
+                                                <li><a href="#">{{ request.user.username }}</a></li>
+                                                <li><a href="{% url 'Logout' %}" onclick="event.preventDefault(); logout();">Cerrar sesión</a></li>
+                                            </ul>
+                                        </li>
+                                    {% else %}
+                                        <li>
+                                            <a href="#"><i class="icon-user"></i></a>
+                                            <ul>
+                                                <li><a href="{% url 'Login' %}">Login</a></li>
+                                                <li><a href="{% url 'Register' %}">Registrarse</a></li>
+                                            </ul>
+                                        </li>
+                                    {% endif %}
+                                </ul>
+                            </div>
+                            <div class="mobile-menu-toggle d-xl-none">
+                                <a href="#ltn__utilize-mobile-menu" class="ltn__utilize-toggle">
+                                    <svg viewBox="0 0 800 600">
+                                        <path d="M300,220 C300,220 520,220 540,220 C740,220 640,540 520,420 C440,340 300,200 300,200" id="top">
+                                        </path>
+                                        <path d="M300,320 L540,320" id="middle"></path>
+                                        <path d="M300,210 C300,210 520,210 540,210 C740,210 640,530 520,410 C440,330 300,190 300,190"
+                                            id="bottom" transform="translate(480, 320) scale(1, -1) translate(-480, -318) "></path>
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <!-- ltn__header-middle-area end -->
         </header>
 
         <br><br><br><br>
@@ -205,6 +258,17 @@
 
     <script src="{% static 'Vicodin/js/plugins.js' %}"></script>
     <script src="{% static 'Vicodin/js/main.js' %}"></script>
+    <script>
+        function logout() {
+            fetch('{% url "Logout" %}', {
+                method: 'POST',
+                headers: {
+                    'X-CSRFToken': '{{ csrf_token }}'
+                },
+                body: ''
+            }).then(() => window.location.href = '{% url "Inicio" %}');
+        }
+    </script>
 
 
 </body>
