--- a/Vicodin/static/Vicodin/css/style.css
+++ b/Vicodin/static/Vicodin/css/style.css
@@ -14675,6 +14675,15 @@ input.cart-plus-minus-box {
   [type="submit"].btn {
     padding: 12px 30px; } }
 
+
+/* Estilo para el avatar */
+.avatar {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
 /* ----------------------------------------------------
     END
 ---------------------------------------------------- */
