--- a/Vicodin/templates/Vicodin/base.html
+++ b/Vicodin/templates/Vicodin/base.html
@@ -57,9 +57,6 @@
                                     <div class="ltn__main-menu">
                                         <ul>
                                             <li><a href="{% url 'Inicio' %}">Inicio</a></li>
-                                            {% if request.user.is_authenticated %}
-                                                <li><a href="{% url 'CrearCliente' %}">Clientes</a></li>
-                                            {% endif %}
                                             <li><a href="{% url 'ProductoList' %}">Productos</a></li>
                                             <li><a href="{% url 'PublicacionList' %}">Publicaciones</a></li>
                                             <li><a href="{% url 'BuscarProducto' %}">Buscar productos</a></li>
@@ -70,40 +67,23 @@
                         </div>
                         <!-- COLUMN RIGTH -->
                         <div class="col--- ltn__header-options ltn__header-options-2 mb-sm-20">
-                            <!-- header-search-1 -->
-                            <div class="header-search-wrap">
-                                <div class="header-search-1">
-                                    <div class="search-icon">
-                                        <i class="icon-search for-search-show"></i>
-                                        <i class="icon-cancel  for-search-close"></i>
-                                    </div>
-                                </div>
-                                <div class="header-search-1-form">
-                                    <form id="#" method="get" action="#">
-                                        <input type="text" name="search" value="" placeholder="Search here..." />
-                                        <button type="submit">
-                                            <span><i class="icon-search"></i></span>
-                                        </button>
-                                    </form>
-                                </div>
-                            </div>
                             <!-- user-menu -->
                             <div class="ltn__drop-menu user-menu">
                                 <ul>
                                     {% if request.user.is_authenticated %}
                                         <li>
-                                            <a href="#"><i class="icon-user"></i></a>
+                                            <img src="{{request.user.imagen.imagen.url}}" class="avatar" alt="Avatar del usuario">
                                             <ul>
-                                                <li><a href="#">{{ request.user.username }}</a></li>
+                                                <li><a href="{% url 'EditarPerfil' %}">{{ request.user.username }}</a></li>
                                                 <li><a href="{% url 'Logout' %}" onclick="event.preventDefault(); logout();">Cerrar sesión</a></li>
                                             </ul>
                                         </li>
-                                    {% else %}
+                                        {% else %}
                                         <li>
-                                            <a href="#"><i class="icon-user"></i></a>
-                                            <ul>
-                                                <li><a href="{% url 'Login' %}">Login</a></li>
-                                                <li><a href="{% url 'Register' %}">Registrarse</a></li>
+                                            <img src="{% static 'Vicodin/assets/img/default-avatar.png' %}" class="avatar icon-user" alt="Avatar del usuario">
+                                        <ul>
+                                            <li><a href="{% url 'Login' %}">Login</a></li>
+                                            <li><a href="{% url 'Register' %}">Registrarse</a></li>
                                             </ul>
                                         </li>
                                     {% endif %}
@@ -156,89 +136,12 @@
 
 
         <footer class="ltn__footer-area  ">
-            <div class="footer-top-area  section-bg-1 plr--5">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-xl-3 col-md-6 col-sm-6 col-12">
-                            <div class="footer-widget footer-about-widget">
-                                <div class="footer-logo">
-                                    <div class="site-logo">
-                                        <img src="{% static 'Vicodin/assets/img/logo.png' %}" alt="Logo">
-                                    </div>
-                                </div>
-                                <p>Lorem Ipsum is simply dummy text of the and typesetting industry. Lorem Ipsum is
-                                    dummy text of the printing.</p>
-                                <div class="footer-address">
-                                    <ul>
-                                        <li>
-                                            <div class="footer-address-icon">
-                                                <i class="icon-placeholder"></i>
-                                            </div>
-                                            <div class="footer-address-info">
-                                                <p>Brooklyn, New York, United States</p>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="footer-address-icon">
-                                                <i class="icon-call"></i>
-                                            </div>
-                                            <div class="footer-address-info">
-                                                <p><a href="tel:+0123-456789">+0123-456789</a></p>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="footer-address-icon">
-                                                <i class="icon-mail"></i>
-                                            </div>
-                                            <div class="footer-address-info">
-                                                <p><a href="mailto:example@example.com">example@example.com</a></p>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <div class="ltn__social-media mt-20">
-                                    <ul>
-                                        <li><a href="#" title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
-                                        <li><a href="#" title="Twitter"><i class="fab fa-twitter"></i></a></li>
-                                        <li><a href="#" title="Linkedin"><i class="fab fa-linkedin"></i></a></li>
-                                        <li><a href="#" title="Youtube"><i class="fab fa-youtube"></i></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-2 col-md-6 col-sm-6 col-12">
-                            <div class="footer-widget footer-menu-widget clearfix">
-                                <h4 class="footer-title">Company</h4>
-                                <!-- <div class="footer-menu">
-                                    <ul>
-                                        <li><a href="about.html">About</a></li>
-                                        <li><a href="blog.html">Blog</a></li>
-                                        <li><a href="shop.html">All Products</a></li>
-                                        <li><a href="locations.html">Locations Map</a></li>
-                                        <li><a href="faq.html">FAQ</a></li>
-                                        <li><a href="contact.html">Contact us</a></li>
-                                    </ul>
-                                </div> -->
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
             <div class="ltn__copyright-area ltn__copyright-2 section-bg-7  plr--5">
                 <div class="container-fluid ltn__border-top-2">
                     <div class="row">
                         <div class="col-md-6 col-12">
                             <div class="ltn__copyright-design clearfix">
                                 <p>All Rights Reserved @ Company <span class="current-year"></span></p>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-12 align-self-center">
-                            <div class="ltn__copyright-menu text-end">
-                                <ul>
-                                    <li><a href="#">Terms & Conditions</a></li>
-                                    <li><a href="#">Claim</a></li>
-                                    <li><a href="#">Privacy & Policy</a></li>
-                                </ul>
                             </div>
                         </div>
                     </div>
