--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -13,9 +13,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title-area text-center">
-                        <h1 class="section-title">Sign In <br>To Your Account</h1>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br>
-                            Sit aliquid, Non distinctio vel iste.</p>
+                        <h1 class="section-title">Ingresa<br>Con tu cuenta</h1>
                     </div>
                 </div>
             </div>
@@ -30,21 +28,16 @@
                                 <button class="theme-btn-1 btn btn-block" type="submit">Iniciar sesión</button>
                             </div>
                             <div class="go-to-btn mt-20">
-                                <a href="#"><small>{{msg_login}}</small></a>
-                            </div>
-                            <div class="go-to-btn mt-20">
-                                <a href="#"><small>FORGOTTEN YOUR PASSWORD?</small></a>
+                                <small>{{msg_login}}</small>
                             </div>
                         </form>
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="account-create text-center pt-50">
-                        <h4>DON'T HAVE AN ACCOUNT?</h4>
-                        <p>Add items to your wishlistget personalised recommendations <br>
-                            check out more quickly track your orders register</p>
+                        <h4>No tenes una cuenta?</h4>
                         <div class="btn-wrapper">
-                            <a href="register.html" class="theme-btn-1 btn black-btn">CREATE ACCOUNT</a>
+                            <a href="{% url 'Register' %}" class="theme-btn-1 btn black-btn">Registrate</a>
                         </div>
                     </div>
                 </div>
