--- a/Vicodin/templates/Vicodin/nosotros.html
+++ b/Vicodin/templates/Vicodin/nosotros.html
@@ -10,17 +10,17 @@
 <div class="ltn__utilize-overlay"></div>
 
 <!-- BREADCRUMB AREA START -->
-<div class="ltn__breadcrumb-area text-left bg-overlay-white-30 bg-image " data-bs-bg="img/bg/14.jpg">
+<div class="ltn__breadcrumb-area text-left bg-overlay-white-30 bg-image " data-bs-bg="{% static 'assets/img/bg/14.jpg' %}">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
                 <div class="ltn__breadcrumb-inner">
-                    <h1 class="page-title">About Us</h1>
+                    <h1 class="page-title">Sobre nosotros</h1>
                     <div class="ltn__breadcrumb-list">
                         <ul>
-                            <li><a href="index.html"><span class="ltn__secondary-color"><i
-                                            class="fas fa-home"></i></span> Home</a></li>
-                            <li>About Us</li>
+                            <li><a href="{% url 'Inicio' %}"><span class="ltn__secondary-color"><i
+                                            class="fas fa-home"></i></span> Inicio</a></li>
+                            <li>Sobre nosotros</li>
                         </ul>
                     </div>
                 </div>
@@ -34,51 +34,16 @@
 <div class="ltn__about-us-area pt-25--- pb-120 ">
     <div class="container">
         <div class="row">
-            <div class="col-lg-6 align-self-center">
-                <div class="about-us-img-wrap about-img-left">
-                    <img src="{%static 'Vicodin/assets/img/others/9.png'%}" alt="About Us Image">
-                </div>
-            </div>
-            <div class="col-lg-6 align-self-center">
+            <div class="col-lg-12 align-self-center">
                 <div class="about-us-info-wrap">
                     <div class="section-title-area ltn__section-title-2--- mb-30">
-                        <h6 class="section-subtitle section-subtitle-2 ltn__secondary-color d-none">About Us</h6>
+                        <h6 class="section-subtitle section-subtitle-2 ltn__secondary-color d-none">Sobre nosotros</h6>
                         <h1 class="section-title">Your faithful partners Medical Goods</h1>
-                        <p>Houzez allow you to design unlimited panels and real estate custom
-                            forms to capture leads and keep record of all information</p>
-                    </div>
-                    <ul class="ltn__list-item-1 ltn__list-item-1-before--- clearfix">
-                        <li><i class="fas fa-check-square"></i> Better security for patient privacy and information.
-                        </li>
-                        <li><i class="fas fa-check-square"></i> More products at lower prices.</li>
-                        <li><i class="fas fa-check-square"></i> connect customers with the power of eCommerce at all.
-                        </li>
-                    </ul>
-                    <div class="about-author-info-2 border-top mt-30 pt-20">
-                        <ul>
-                            <li>
-                                <div class="about-author-info-2-brief  d-flex">
-                                    <div class="author-img">
-                                        <img src="{%static 'Vicodin/assets/img/blog/author.jpg'%}" alt="#">
-                                    </div>
-                                    <div class="author-name-designation">
-                                        <h4 class="mb-0">Jerry Henson</h4>
-                                        <small>Medical Specialist</small>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="about-author-info-2-contact  d-flex">
-                                    <div class="about-contact-icon d-flex align-self-center mr-10">
-                                        <i class="icon-call"></i>
-                                    </div>
-                                    <div class="about-author-info-2-contact-info">
-                                        <small>Get Support</small>
-                                        <h6 class="mb-0">123-456-789-10</h6>
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
+                        <p>
+                            Pagina web desarrollada por Ayrton Pace, con el fin de aprender Python y Django.
+                            La idea principal de esta web consta en mostrar los productos y publicaciones de un pequeño blog que puede hacer una farmacia a diario.
+                            Se utilizan vistas basadas en clase
+                        </p>
                     </div>
                 </div>
             </div>
