--- a/users/templates/users/edit_user.html
+++ b/users/templates/users/edit_user.html
@@ -7,7 +7,7 @@
 
 {% block main %}
 
-<form method="post">
+<form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <div class="ltn__contact-message-area mb-120 mb--100">
         <div class="container">
