--- a/Vicodin/templates/Vicodin/vbc/producto_list.html
+++ b/Vicodin/templates/Vicodin/vbc/producto_list.html
@@ -25,7 +25,7 @@
                                                     {% if producto.image %}
                                                     <img src="{{ producto.image.url }}" alt="{{ producto.name }}">
                                                     {% else %}
-                                                    <img src="{% static 'Vicodin/assets/img/product/12.png' %}" alt="No hay imagen disponible">
+                                                    <img src="{% static 'Vicodin/assets/img/no-image.jpg' %}" alt="No hay imagen disponible">
                                                     {% endif %}
                                             <div class="product-hover-action">
                                                 <ul>
