--- a/Vicodin/templates/Vicodin/nosotros.html
+++ b/Vicodin/templates/Vicodin/nosotros.html
@@ -34,16 +34,25 @@
 <div class="ltn__about-us-area pt-25--- pb-120 ">
     <div class="container">
         <div class="row">
-            <div class="col-lg-12 align-self-center">
+            <div class="col-lg-6 align-self-center">
                 <div class="about-us-info-wrap">
                     <div class="section-title-area ltn__section-title-2--- mb-30">
                         <h6 class="section-subtitle section-subtitle-2 ltn__secondary-color d-none">Sobre nosotros</h6>
-                        <h1 class="section-title">Your faithful partners Medical Goods</h1>
+                        <h1 class="section-title">Ayrton Pace - Ariel Serur</h1>
                         <p>
-                            Pagina web desarrollada por Ayrton Pace, con el fin de aprender Python y Django.
-                            La idea principal de esta web consta en mostrar los productos y publicaciones de un pequeño blog que puede hacer una farmacia a diario.
-                            Se utilizan vistas basadas en clase
+                            Somos dos amigos apasionados por la tecnología que, juntos, decidimos dar un paso más en nuestra formación
+                            inscribiéndonos en el curso de Python en Coderhouse. Durante el curso, descubrimos que nuestra afinidad y el tiempo que
+                            hemos compartido nos permitieron no solo aprender juntos, sino también emprender proyectos que reflejan nuestro
+                            entusiasmo y dedicación. Este sitio web es el resultado de esa colaboración, donde combinamos nuestras habilidades y
+                            conocimientos para crear algo de lo que estamos realmente orgullosos.
                         </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 align-self-center">
+                <div class="about-us-info-wrap">
+                    <div class="section-title-area ltn__section-title-2--- mb-30">
+                        <img src="{% static 'Vicodin/assets/img/creators.jpeg' %}" alt="">
                     </div>
                 </div>
             </div>
