--- a/Vicodin/templates/Vicodin/vbc/publicacion_list.html
+++ b/Vicodin/templates/Vicodin/vbc/publicacion_list.html
@@ -27,7 +27,7 @@
                             <div class="ltn__blog-meta">
                                 <ul>
                                     <li class="ltn__blog-author">
-                                        <span></span> <i class="far fa-user"></i>by: {{publicacion.author}}</span>
+                                        <span></span> <i class="far fa-user"></i>Por: {{publicacion.author}}</span>
                                     </li>
                                 </ul>
                             </div>
