Ultimos detalles del sitio

--- a/Vicodin/templates/Vicodin/404.html
+++ b/Vicodin/templates/Vicodin/404.html
@@ -6,18 +6,18 @@
 
 
 {% block main %}
-<div class="ltn__about-us-area pt-25--- pb-120 ">
+<!-- BREADCRUMB AREA START -->
+<div class="ltn__breadcrumb-area text-left bg-overlay-white-30 bg-image "
+    data-bs-bg="{% static 'assets/img/bg/14.jpg' %}">
     <div class="container">
         <div class="row">
-            <div class="col-lg-12 align-self-center">
-                <div class="about-us-info-wrap">
-                    <div class="section-title-area ltn__section-title-2--- mb-30">
-                        <h6 class="section-subtitle section-subtitle-2 ltn__secondary-color d-none">La página que quieres acceder no existe.</h6>
-                    </div>
+            <div class="col-lg-12">
+                <div class="ltn__breadcrumb-inner">
+                    <h1 class="page-title">404 Pagina no encontrada</h1>
+
                 </div>
             </div>
         </div>
     </div>
 </div>
-
 {% endblock main %}
