--- a/Vicodin/templates/Vicodin/productos_busqueda_resultados.html
+++ b/Vicodin/templates/Vicodin/productos_busqueda_resultados.html
@@ -30,8 +30,7 @@
                                             <div class="product-hover-action">
                                                 <ul>
                                                     <li>
-                                                        <a href="{% url 'ProductoDetail' producto.id %}" title="Quick View" data-bs-toggle="modal"
-                                                            data-bs-target="#quick_view_modal">
+                                                        <a href="{% url 'ProductoDetail' producto.id %}"  >
                                                             <i class="far fa-eye"></i>
                                                         </a>
                                                     </li>
